--- a/app/templates/tab-chats.html
+++ b/app/templates/tab-chats.html
@@ -1,15 +1,9 @@
 <ion-view view-title="Conversations">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
+      <ion-item class="item item-icon-right" ng-repeat="c in chats" type="item-text-wrap" href="#/tab/chats/{{c._id}}">
+        <h2>{{c.name}}</h2>
+        <p>{{c.description}}</p><i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
   </ion-content>
