--- a/app/templates/tab-contacts.html
+++ b/app/templates/tab-contacts.html
@@ -5,7 +5,7 @@
       <input type="text" placeholder="Search" ng-model="filter">
     </label>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="c in contacts | filter:{lastName:filter}" type="item-text-wrap">
+      <ion-item class="item-avatar item-icon-right" ng-repeat="c in contacts | filter:filter | orderBy:'firstName'">
         <img ng-src="{{c.picture}}"> {{c.firstName}} {{c.lastName}}
       </ion-item>
     </ion-list>
