--- a/app/templates/chat-detail.html
+++ b/app/templates/chat-detail.html
@@ -2,42 +2,47 @@
   <ion-content has-bouncing="true" class="has-header has-footer"
                delegate-handle="userMessageScroll">
 
-    <div ng-repeat="m in messages" class="message-wrapper">
+    <ion-list>
+      <ion-item ng-repeat="msg in messages" class="message-wrapper">
 
-      <div ng-if="m.sender !== 'Tracey'">
+        <div ng-if="msg.sender !== 'Tracey'"> <!-- TODO: test on current user -->
         <div class="chat-bubble left">
 
           <div class="message">
-            {{m.message}}
+            {{msg.message}}
             <div class="message-detail">
-              <span class="bold">{{m.sender}}</span>,
+              <span class="bold">{{msg.sender}}</span>,
             </div>
           </div>
         </div>
       </div>
-      <div ng-if="m.sender === 'Tracey'">
+        <div ng-if="msg.sender === 'Tracey'">
         <div class="chat-bubble right">
 
           <div class="message">
-            {{m.message}}
+            {{msg.message}}
             <div class="message-detail">
-              <span class="bold">{{m.sender}}</span>,
+              <span class="bold">{{msg.sender}}</span>,
             </div>
           </div>
         </div>
       </div>
 
-    </div>
+      </ion-item>
+    </ion-list>
 
   </ion-content>
+  <form ng-submit="sendMessage()">
   <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
+
     <label class="item item-input-wrapper">
-        <input type="text" ng-model="input.message" placeholder="Send a message..." maxlength="1500" />
+      <input type="text" ng-model="newMsg.message" placeholder="Send a message..." maxlength="1500"/>
       </label>
       <div class="footer-btn-wrap">
-        <button class="button button-icon icon ion-android-send" ng-disabled="!input.message || input.message === ''">
+        <button type="submit" class="button button-icon icon ion-android-send"
+                ng-disabled="!newMsg.message || newMsg.message === ''">
         </button>
       </div>
-    </label>
   </ion-footer-bar>
+  </form>
 </ion-view>
