--- a/app/templates/chat-detail.html
+++ b/app/templates/chat-detail.html
@@ -3,15 +3,14 @@
                delegate-handle="userMessageScroll">
 
     <ion-list>
-      <ion-item ng-repeat="msg in messages" class="message-wrapper">
-
+      <ion-item ng-repeat="msg in messages | orderBy:'sentDate'" class="message-wrapper">
         <div ng-if="msg.sender !== 'Tracey'"> <!-- TODO: test on current user -->
         <div class="chat-bubble left">
 
           <div class="message">
             {{msg.message}}
             <div class="message-detail">
-              <span class="bold">{{msg.sender}}</span>,
+              <span class="bold">{{msg.sender}}</span>,<span am-time-ago="msg.sentDate"></span>
             </div>
           </div>
         </div>
@@ -22,7 +21,7 @@
           <div class="message">
             {{msg.message}}
             <div class="message-detail">
-              <span class="bold">{{msg.sender}}</span>,
+              <span class="bold">{{msg.sender}}</span>,<span am-time-ago="msg.sentDate"></span>
             </div>
           </div>
         </div>
