--- a/app/templates/tab-chats.html
+++ b/app/templates/tab-chats.html
@@ -7,7 +7,8 @@
       </a>
     </div>
     <ion-list>
-      <ion-item class="item item-icon-right" ng-repeat="c in chats" type="item-text-wrap" href="#/tab/chats/{{c._id}}">
+      <ion-item class="item item-icon-right" ng-repeat="c in chats | orderBy:'-creationDate'" type="item-text-wrap"
+                href="#/tab/chats/{{c._id}}">
         <h2>{{c.name}}</h2>
         <p>{{c.description}}</p><i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
