--- a/app/templates/tab-account.html
+++ b/app/templates/tab-account.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Account">
   <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
+    <div class="list list-inset">
+      <button ng-click="logout()" class="button button-block button-assertive">
+        Logout <i class="icon ion-android-exit"></i>
+      </button>
+    </div>
   </ion-content>
 </ion-view>
