--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,8 +7,11 @@
           <select ng-model="form.user" ng-options="user as user.firstName for user in users"></select>
         </label>
         <button type="submit" class="button button-block button-positive">
-          Login
+          Login <i class="icon ion-log-in"></i>
         </button>
+      </div>
+      <div class="text-center">
+        <a href="/#/signup">Create Account</a>
       </div>
     </form>
   </ion-content>
